--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <header id="" class="head-title">
     <h1 id="title">Feeling Survey Form</h1>
     <p id="description">Do you need someone to confide in?</p>
-    
   </header><!-- /header -->
   
   <div class="wraper">
@@ -43,7 +42,7 @@
     </div>
     <div class="content-wraper">
       <label for="dropdown" id="dropdown-label" class="label-wraper">Which option best describes your current feeling?</label>
-      <select id="dropdown" name="dropdown">
+      <select id="dropdown" name="dropdown" class="middle">
         <option value="">Set your feeling</option>
         <option value="happy">Happy</option>
         <option value="love">Love</option>
